fixed navbar on mobile

--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -92,6 +92,7 @@
         max-height: 500px;
         padding: 16px 0;
         transition: max-height $transition_time ease-in, padding $transition_time ease-in;
+        z-index: 10;
     }
 
     .logo {
